--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +47,10 @@
     "\n",
     "* List popular languages for Data Science\n",
     "* List popular development environments for data science\n",
-    "* List popular data science libraries"
+    "* List popular data science libraries\n",
+    "* Add comments and code\n",
+    "* Add ordered and unordered lists\n",
+    "* Add headings and comments"
    ]
   },
   {
@@ -60,7 +70,10 @@
     "1. Python\n",
     "2. R\n",
     "3. SQL\n",
-    "4. Julia"
+    "4. Julia\n",
+    "5. Java\n",
+    "6. PHP\n",
+    "7. Go"
    ]
   },
   {
@@ -81,7 +94,11 @@
     "2. pandas\n",
     "3. matplotlib\n",
     "4. scikit-Learn\n",
-    "5. Tensorflow"
+    "5. Tensorflow\n",
+    "6. Keras\n",
+    "7. TensorFlow\n",
+    "8. PyTorch\n",
+    "9. Apache Spark"
    ]
   },
   {
@@ -106,7 +123,9 @@
     "|---|\n",
     "| Jupyter Notebook |\n",
     "| google colab |\n",
-    "| Anaconda | "
+    "| Anaconda | \n",
+    "| R-Studio | \n",
+    "| Spyder | "
    ]
   },
   {
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -136,7 +155,7 @@
        "17"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -167,7 +186,7 @@
        "3.3333333333333335"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
